<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.cdh.otsimplex.MainActivity">

    <RelativeLayout
        android:layout_alignParentTop="true"
        android:id="@+id/layout_input"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_margin="@dimen/layout_margin"
        android:padding="@dimen/layout_margin"
        android:background="@drawable/layout_input_bg">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/buttons">

            <LinearLayout
                android:id="@+id/main_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/radiogroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <RadioButton
                        android:text="@string/max"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:id="@+id/max"/>

                    <RadioButton
                        android:text="@string/min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/min"/>
                </RadioGroup>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <TextView
                        android:text="@string/fo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_weight="1" />

                    <EditText
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned|numberDecimal"
                        android:background="@drawable/input_bg"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:nextFocusDown="@+id/function_x2"
                        android:id="@+id/function_x1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/x1"/>

                    <EditText
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned|numberDecimal"
                        android:background="@drawable/input_bg"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:id="@+id/function_x2"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/x2"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:layout_weight="1">

                    <TextView
                        android:text="@string/restrictions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20sp"/>

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@android:drawable/ic_input_add"
                        android:background="@drawable/button_bg"
                        android:id="@+id/addRest" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@android:drawable/ic_delete"
                        android:background="@drawable/button_bg"
                        android:id="@+id/remove" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btn_clear"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:textColor="@color/colorAccent"
                android:text="clear"/>

            <Button
                android:id="@+id/btn_sbs"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:textColor="@color/colorAccent"
                android:text="step by step"/>

            <Button
                android:id="@+id/btn_simplex"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:textColor="@color/colorAccent"
                android:text="simplex"/>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@id/layout_input"
        android:id="@+id/layout_output"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="@dimen/layout_margin"
        android:padding="@dimen/layout_margin"
        android:background="@drawable/layout_output_bg">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_margin="@dimen/layout_margin"
                android:id="@+id/tv_output"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/result"/>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>
